[package]
name = "edile"
version = "0.1.0"
authors = ["Giacomo Stevanato <giaco.stevanato@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
edile-derive = { version = "0.1", path = "../edile-derive", optional = true }

[features]
default = ["std"]
std = ["alloc"]
alloc = []
derive = ["edile-derive"]

[dev-dependencies]
edile-derive = { version = "0.1", path = "../edile-derive" }
